--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "liuaiying <1425577366@qq.com>",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
